features double scroll fix

--- a/task2/src/index.css
+++ b/task2/src/index.css
@@ -4,7 +4,6 @@ body,
 html {
 	font-family: "Source Sans Pro", sans-serif;
 	scroll-behavior: smooth;
-	overflow-y: scroll;
 }
 
 * {
